<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Android Data Collection</string>
    <string name="action_settings">Settings</string>
    <string name="settings">Settings:</string>
    <string name="show_sensor_data">Show sensor data:</string>
    <string name="service">Service</string>
    <string name="change_fetch_rate">Change Fetch Rate [s]</string>
	<string name="change_fetch_rate_time">10</string>
	
</resources>