<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >	    


	    <ListView
	        android:id="@+id/listview"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" 
	        android:layout_below="@+id/showSensorDataButton"/>

	    <ToggleButton
	        android:id="@+id/serviceButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBaseline="@+id/serviceView"
	        android:layout_alignBottom="@+id/serviceView"
	        android:layout_alignParentRight="true" />

	    <EditText
	        android:id="@+id/changeFetchRateEditText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/serviceButton"
	        android:layout_alignParentRight="true"
	        android:layout_below="@+id/serviceView"
	        android:ems="10"
	        android:inputType="number"
	        android:text="@string/change_fetch_rate_time" >
	    </EditText>

	    <TextView
	        android:id="@+id/settingsView"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentTop="true"
	        android:text="@string/settings" />

	    <TextView
	        android:id="@+id/changeFetchRateView"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBaseline="@+id/changeFetchRateEditText"
	        android:layout_alignBottom="@+id/changeFetchRateEditText"
	        android:layout_alignParentLeft="true"
	        android:text="@string/change_fetch_rate"
	        android:textAppearance="?android:attr/textAppearanceSmall" />

	    <TextView
	        android:id="@+id/serviceView"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/settingsView"
	        android:text="@string/service"
	        android:textAppearance="?android:attr/textAppearanceSmall" />

	    <ToggleButton
	        android:id="@+id/showSensorDataButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_below="@+id/changeFetchRateEditText" />

	    <TextView
	        android:id="@+id/showSensorDataView"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBaseline="@+id/showSensorDataButton"
	        android:layout_alignBottom="@+id/showSensorDataButton"
	        android:layout_alignParentLeft="true"
	        android:text="@string/show_sensor_data"
	        android:textAppearance="?android:attr/textAppearanceSmall" />
 
</RelativeLayout>